styles/DropdownInfo.module.scss
@import "./colors.module";

.container {
  display: flex;
  flex-direction: column;
}

.header {
  align-items: center;
  border-bottom: 1px solid $lines-color;
  display: flex;
  gap: 0.5rem;
  padding: 0.5rem;

  &:hover {
    color: $secondary-color-white;
    cursor: pointer;
  }

  & > i {
    transition: transform 0.5s ease-in-out;
  }
}

.active {
  color: $secondary-color-white;

  &.header > i {
    transform: rotate(90deg);
  }
}

.body {
  border-bottom: 1px solid $lines-color;
  display: none;
  flex-direction: column;
  gap: 0.5rem;
  padding: 0.5rem;

  & > * {
    align-items: center;
    cursor: pointer;
    display: flex;
    font-size: 12px;
    gap: 0.5rem;

    &.projects {
      font-size: 16px;
    }

    &:hover > * {
      color: white;
    }

    &:nth-child(1) .folder {
      color: $accent-color-orange;
    }

    &:nth-child(2) .folder {
      color: $accent-color-green;
    }

    &.project {
      font-size: 16px;
    }
  }
}

.visible {
  display: flex;
}

